# bookstore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yaml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: __init__.py  math_test.py
order/tests/test_serializers/: __init__.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py  math_test.py
product/tests/test_serializers/: __init__.py
product/tests/test_viewsets/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
