[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Oseias Nascimento <oseiasal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
factory-boy = "^3.2.1"
django = "^4.2.1"
django-admin = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
