[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Oseias Nascimento <oseiasal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-admin = "^2.0.2"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
