[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Oseias Nascimento <oseiasal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
factory-boy = "^3.2.1"
django = "^4.2.1"
django-admin = "^2.0.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
